# stream-switcher-poc

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/config/yaml/: captureConfig.yaml  displayConfig.yaml  switcherConfig.yaml
modules/services/: CMakeLists.txt
modules/services/capture_svc/: CMakeLists.txt
modules/services/capture_svc/include/: capture_svc.h  simple_read_service.h  simple_write_service.h
modules/services/capture_svc/src/: capture_svc.cpp
modules/services/display_svc/: CMakeLists.txt
modules/services/display_svc/include/: display_svc.h
modules/services/display_svc/src/: display_svc.cpp
modules/services/stream_switcher_svc/: CMakeLists.txt
modules/services/stream_switcher_svc/include/: stream_switcher_svc.h
modules/services/stream_switcher_svc/src/: stream_switcher_svc.cpp
modules/zmq_application/: CMakeLists.txt
modules/zmq_application/capture_application/: CMakeLists.txt
modules/zmq_application/capture_application/src/: capture_application.cpp
modules/zmq_application/common/: config.h
modules/zmq_application/display_application/: CMakeLists.txt
modules/zmq_application/display_application/src/: display_application.cpp
modules/zmq_application/switcher_application/: CMakeLists.txt
modules/zmq_application/switcher_application/src/: switcher_application.cpp
tests/: CMakeLists.txt
tests/services_test/: CMakeLists.txt
tests/services_test/stream_switcher_svc_test/: CMakeLists.txt
tests/services_test/stream_switcher_svc_test/src/: stream_switcher_svc_test.cpp
